Fix menu alignment on desktop size screens

--- a/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
@@ -1,6 +1,6 @@
 .wp-block-group.global-header {
 	display: flex;
-	align-items: center;
+	align-items: flex-end;
 	font-size: 21px;
 
 	@media (--tablet) {
@@ -9,15 +9,28 @@
 
 	& > * {
 		flex-shrink: 0;
-		padding-top: 60px;
-		padding-bottom: 17px;
-		padding-right: var(--wp--style--block-gap);
-		padding-left: var(--wp--style--block-gap);
+		padding: 60px var(--wp--style--block-gap) 17px;
 		margin: 0 auto;
 
 		@media (--tablet) {
 			padding-top: 37px;
 			padding-bottom: 37px;
+		}
+	}
+
+	& .global-header__search,
+	& .global-header__navigation {
+		padding: 0;
+
+		& .wp-block-navigation__responsive-container-open {
+
+			/* Magic numbers to center the 24px icon in 117px height. */
+			padding: 70px var(--wp--style--block-gap) 23px;
+
+			@media (--tablet) {
+				padding-top: 37px;
+				padding-bottom: 37px;
+			}
 		}
 	}
 
