--- a/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
@@ -2,11 +2,6 @@
 	& .global-header__wporg-logo-mark,
 	& .global-header__wporg-logo-full {
 		border-right: 1px solid var(--wp--preset--color--darker-grey);
-
-		@media (--tablet) {
-			padding-top: 34px;
-			padding-bottom: 28px;
-		}
 	}
 
 	& .global-header__wporg-logo-full {
